# gtest_template

./: CMakeLists.txt  README.md
cmake/: UpdateSubmodules.cmake
tests/: tests_main.cpp
